--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "pdiffy": "./node_modules/.bin/protractor --disableChecks"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jasmine": "^2.6.0"
+    "blink-diff": "^1.0.13",
+    "jasmine": "^2.6.0",
+    "protractor": "^5.1.2",
+    "yargs": "^8.0.2"
   }
 }
